--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ li {
 }
 
 li a {
-    display: block;
+    display: flex;
+    align-items: center;   
+    justify-content: center; 
     color: #000000;
     text-align: center;
     padding: 14px 16px;
@@ -120,7 +122,8 @@ main section ul {
 }
 
 main section li a {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     padding: 0.5em 1em;
     background-color: #ef881a;
     color: #012030;
@@ -273,7 +276,7 @@ footer h3 {
 }
 
 footer p, footer a {
-    display: block;
+    display: flex;
     text-align: center;
     margin: 0.5em 0;
     font-size: 1.1em;
@@ -281,7 +284,7 @@ footer p, footer a {
 }
 
 footer a {
-    display: inline-block;
+    display: flex;
     padding: 0.3em 0.6em;
     border-radius: 5px;
     text-decoration: none;
